brand section texts overflow fixed1

--- a/style.css
+++ b/style.css
@@ -211,14 +211,14 @@
   text-align: center;
   z-index: 2;
   width: 90%;
-  gap: 0.75rem;
+  gap: 0.25rem;
 }
 
 .overlay-text h3 {
   color: bisque;
   font-size: clamp(0.7rem, 2vw, 1.2rem);
   font-family: "Bebas Neue", sans-serif;
-  letter-spacing: 0.2rem;
+  letter-spacing: 1rem;
 }
 
 .overlay-text h1 {
@@ -232,7 +232,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.2rem;
 }
 
 .title::before,
